* commit 4912479ee3ee464fc850a07c89822ff66cefb402
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Thu Jan 30 15:35:45 2014 -0500
| 
|     GPFA now works.
|  
* commit f3730b79d855d168f2e15e1cae2b17f34c182aa7
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Jan 29 17:57:40 2014 -0500
| 
|     Used calls in cxf...f90 to figure out how to use GPFA correctly. Now ggadt mysteriously segfaults, and I cannot find where this happens, since the segfault occurs after the cleanup() command. I'm trying to get gdb working to figure out the problem.
|  
* commit c1b044eec3d6c3c696926d40334528c2c47bb5d5
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Jan 28 19:20:32 2014 -0500
| 
|     Now conditionally uses either gpfa or fftw. You have to --enable-fftw to use it. GPFA DOES NOT currently work; segfaulting. I dont understand the meaning of the JUMP and INC parameters.
|  
* commit 2c912e6ef41d53645198708ae8cbd1244565fff2
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Jan 28 11:39:43 2014 -0500
| 
|     Combined OMP and serial. Spheres module now reads in all parts of header (can't remember if I did that in this commit or last commit...). Fixed problems with command line/parameter file parsing. Autoconf now erases HOME/.ggadt on uninstall and clean. Should probably change this to work with the GNU standard datadir variable in the future.
|  
* commit 78d14e1df9b511b1de7891929224f2223e69245e
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Jan 28 00:59:48 2014 -0500
| 
|     progress on merging omp and serial versions
|    
*   commit a900c4983de91510b6d34d8416e566f1da33c9d4
|\  Merge: 6053d0c 56da91d
| | Author: John Hoffman <jah5@princeton.edu>
| | Date:   Mon Jan 27 21:10:34 2014 -0500
| | 
| |     Merging gpfa
| |   
| * commit 56da91d3cde43d12cf9e91f789def97db60438ad
| | Author: John Hoffman <jah5@princeton.edu>
| | Date:   Mon Jan 27 03:20:43 2014 -0500
| | 
| |     Added gpfa.f90 and a serial module file. The beginning...
| |   