@@ -1,4 +1,4 @@
-AC_INIT([ggadt], [0.9.4], [jah5@princeton.edu])
+AC_INIT([ggadt], [0.9.5], [jah5@princeton.edu])
 AC_PREREQ([2.63]) 
 #AC_CONFIG_MACRO_DIRS([m4])
 AC_CONFIG_SRCDIR([src/sphere.f03])
@@ -315,13 +315,14 @@ AC_SUBST(OPENMP_FCFLAGS)
 AC_SUBST(USE_OMP_LIB)
 AC_SUBST(OMP_COMMENT)
 AC_SUBST(OMP_UNCOMMENT)
-AC_SUBST(omp_lib)
 AC_SUBST(FFTW3_UNCOMMENT)
 AC_SUBST(FFTW3_COMMENT)
 AC_SUBST(USE_FFTW)
 AC_SUBST(GPFA_UNCOMMENT)
 AC_SUBST(GPFA_COMMENT)
 AC_SUBST(USE_GPFA)
+AC_SUBST(omp_lib)
+
 
 
 AC_OUTPUT
