@@ -7,8 +7,18 @@ aclocal -I./m4
 autoconf
 automake -a
 
-bash configure || exit
+#bash configure --enable-fftw3 #FCFLAGS="-O2 -fimplicit-none -Wall -Wline-truncation -Wcharacter-truncation -Wsurprising -Waliasing -Wimplicit-interface -Wunused-parameter -fwhole-file -fcheck=all -std=f2003 -pedantic -fbacktrace" || exit
+#make || exit
+#cp doc/*png doc/ggadt.html
+#make html || exit
+#src/ggadt > test_output_fftw3.dat || exit
+#python scripts/plot.py test_output_fftw3.dat || exit
+
+
+bash configure 
 make || exit
+cp doc/*png doc/ggadt.html
 make html || exit
-src/ggadt > test_output.dat || exit
-python scripts/plot.py test_output.dat || exit
+src/ggadt --grain-geometry=spheres --cluster-file-name=data/clusters/BA.256.1.targ --euler-angle-mode=file --euler-angle-file=eul_angle_file.dat > test_output_gpfa.dat || exit
+python scripts/plot.py test_output_gpfa.dat || exit
+
