@@ -1,3 +1,5 @@
+#Compares timing results
+
 from math import *
 import numpy as np 
 import matplotlib.pyplot as plt 
