@@ -16,19 +16,23 @@ program ggadt
 
     
     real, allocatable :: x(:), y(:), z(:), kx(:), ky(:), thetax(:), thetay(:)
-    complex(c_double_complex), allocatable :: sh(:,:), ftsh(:,:)
+    complex(c_double_complex), allocatable :: sh(:,:), ftsh(:,:), ftsh_firstK(:,:)
     real, allocatable :: chrd(:,:), scatter(:,:), scatter_temp(:,:)
 
     real :: xmin, xmax, ymin, ymax, zmin, zmax, dx, dy, dz, k, l
     real, dimension(3) :: eul_ang
     real, dimension(3,3) :: rm 
-    integer :: i, j, neul, allocatestatus, deallocatestatus, num_args, nangle_new
+    integer :: i, j, neul, allocatestatus, deallocatestatus, num_args, nangle_new, klen
+
+    klen = 4
 
 
     call set_parameter_values()
     call initialize_and_allocate_vars()
     @FFTW3_UNCOMMENT@call set_optimization_mode(fftw_optimization_mode_name)
     if ( verbose_mode ) call print_parameters()
+
+
     
 
     if (geometry .eq. "sphere") then
@@ -41,7 +45,20 @@ program ggadt
         end do
         !$omp end do nowait
         !$omp end parallel
-        ftsh = fft(sh,x,y)
+        if (use_experimental_fft) then
+            !TEST ftsh = experimental_fft(sh,x,y) 
+            ftsh = fft(sh,x,y)
+            @FFTW3_UNCOMMENT@ftsh_firstK = fft_firstK(sh,x,y,klen)
+            write (0,*) "TESTING FIRST K"
+            do i=1,klen
+                do j=1,klen
+                    write (0,*) "(",i,",",j,") fft_firstK = ",ftsh_firstK(i,j),"| ftsh = ",ftsh(i,j)
+                end do 
+            end do 
+            stop
+        else
+            ftsh = fft(sh,x,y)
+        endif
         !stop
         !$omp parallel shared(scatter,ftsh,k,dx,dy) 
         !$omp do schedule(dynamic) private(i,j)
@@ -74,7 +91,12 @@ program ggadt
                 sh = shadow_spheres(x,y,k,rm)
             end if 
 
-            ftsh = fft(sh,x,y)
+            if (use_experimental_fft) then
+                !TEST ftsh = experimental_fft(sh,x,y) 
+                ftsh = fft(sh,x,y)
+            else
+                ftsh = fft(sh,x,y)
+            endif
 
             !$omp parallel shared(scatter,ftsh,k,dx,dy) 
             !$omp do schedule(dynamic) private(i,j)
@@ -132,6 +154,9 @@ contains
     end function get_k
 
     subroutine initialize_and_allocate_vars()
+        implicit none 
+     integer :: line, status
+      character(len=100) :: junk
         allocate(x(ngrid),stat = allocatestatus)
         if (allocatestatus /= 0) stop "*** not enough memory (x) ***"
         allocate(y(ngrid),stat = allocatestatus)
@@ -150,6 +175,8 @@ contains
         if (allocatestatus /= 0) stop "*** not enough memory (sh) ***"
         allocate(ftsh(ngrid,ngrid),stat = allocatestatus)
         if (allocatestatus /= 0) stop "*** not enough memory (ftsh) ***"
+        allocate(ftsh_firstK(klen,klen),stat = allocatestatus)
+        if (allocatestatus /= 0) stop "*** not enough memory (ftsh_firstK) ***"
         allocate(chrd(ngrid,ngrid),stat = allocatestatus)
         if (allocatestatus /= 0) stop "*** not enough memory (chrd) ***"
         allocate(scatter(ngrid,ngrid),stat = allocatestatus)
@@ -166,9 +193,38 @@ contains
             endif
         else if (euler_angle_mode == 'random') then
             call init_random_seed()
+
+        else if (euler_angle_mode == 'file') then 
+            if (euler_angle_file == "") then
+              write(0,*) "ERROR: euler_angle_mode of 'file', but specified file is empty"
+              stop
+            else
+              line = 0
+              open(10,file=euler_angle_file,iostat=status)
+              if (status .ne. 0)then 
+                write(0,*) "ERROR: euler_angle_file of ",euler_angle_file," does not exist."
+                stop
+              else
+              do while(status == 0)
+                read(10,'(A)',iostat=status) junk
+                if (status == 0) line = line+1
+              end do 
+              if (line .ne. nangle) then
+                if (line == 0) then
+                    write(0,*) "ERROR: No orientations found in ", euler_angle_file,"!"
+                    stop
+                end if 
+                write(0,*) "WARNING: nangle set to ",nangle," but there are ",line," orientations in ",&
+                  euler_angle_file,". nangle -> ",line
+                nangle = line 
+              end if
+
+              end if
+              close(10) 
+            end if 
         else 
             write(error_unit,*) " ***error: do not understand euler_angle_mode=",euler_angle_mode
-            call exit()
+            stop
         end if 
 
         if ((geometry == 'sphere') .or. (geometry == 'spheres')) then 
@@ -187,7 +243,7 @@ contains
             grain_a(3) = grain_a(3)*l
         else
             print *,"cannot understand ", geometry
-            call exit()
+            stop
         end if 
         
 
@@ -229,6 +285,7 @@ contains
 
         integer, allocatable :: seed(:)
         integer(4) :: i, n, un, istat, dt(8), pid, t(2), s
+        integer(kind=1) :: getpid
         integer(8) :: count, tms
 
         call random_seed(size = n)
@@ -258,7 +315,8 @@ contains
               t = transfer(tms, t)
            end if
            s = ieor(t(1), t(2))
-           pid = GETPID() + 1099279 ! add a prime
+           !pid = GETPID() + 1099279 ! add a prime
+           pid = 1099279
            s = ieor(s, pid)
            if (n >= 3) then
               seed(1) = t(1) + 36269
@@ -277,6 +335,8 @@ contains
     function get_new_euler_angles(i)
         real, dimension(3) :: get_new_euler_angles
         integer, intent(in) :: i
+        integer                :: j 
+        character(len=50)    :: junk
         integer :: cbrt_nangle, nx, ny, nz
 
 
@@ -288,6 +348,15 @@ contains
             get_new_euler_angles(1) = 2*pi*(nx-1)/cbrt_nangle
             get_new_euler_angles(2) = 2*pi*(ny-1)/cbrt_nangle
             get_new_euler_angles(3) = 2*pi*(nz-1)/cbrt_nangle
+        else if ( euler_angle_mode .eq. 'file' ) then
+            open(unit=1,file=euler_angle_file)
+            if (i > 1) then 
+                do j=1,i-1
+                    read(1,'(A)') junk
+                end do
+            end if 
+            read(1,*) get_new_euler_angles
+            close(1)
         else
             call random_number(get_new_euler_angles)
             get_new_euler_angles(1) = 2*pi*get_new_euler_angles(1)
